--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-          <button class="bet-button" title="bet-button">Сделать ставку</button>
+          <button class="bet-button" title="Сделать ставку" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
